--- a/client/signatures.jade
+++ b/client/signatures.jade
@@ -29,6 +29,9 @@ template(name='add_guest')
         +user_card resident
         +text_edit key='first_name' label='First Name' direct=true
         +text_edit key='last_name' label='Last Name' direct=true
+        +text_edit key='phone' label='Phone' direct=true
+        +text_edit key='text_edit' label='Emergency Contact Name' direct=true
+        +text_edit key='text_edit' label='Emergency Contact Phone' direct=true
         .ui.header I agree to the Guest Waiver Terms
             if agree
                 i.huge.checkmark.green.link.icon.agree
