--- a/client/nav.jade
+++ b/client/nav.jade
@@ -7,8 +7,11 @@ template(name='nav')
                 .icon.item
                     i.large.grey.loading.notched.circle.icon
             else
-                a.header.icon.set_model.item(href='/' class="{{isActivePath '/'}}")
+                a.header.icon.item(href='/' class="{{isActivePath '/'}}")
                     i.grey.home.large.icon
+                    //- +i name='home-page'    
+                a.header.icon.set_model.item(href='/home' class="{{isActivePath '/home'}}")
+                    i.grey.th.large.icon
                     //- +i name='home-page'    
                 if is_staff
                     a.item(href='/staff' class="{{isActivePath '/staff'}}" title='staff')
@@ -25,11 +28,11 @@ template(name='nav')
                 //-     a.item.set_bookmarked_model(href="/m/#{slug}" class="{{isActivePath '/m/#{slug}'}}" title=title)
                 //-         i.large.icon(class=icon)
                 //-         |#{title}
-                //- if is_frontdesk
-                a.item(href='/checkin' class="{{isActivePath '/checkin'}}" title='Health Club')
-                    i.grey.clinic.medical.icon
-                    //- +i name='treadmill'    
-                    .mobile.hidden Health Club
+                if is_frontdesk
+                    a.item(href='/checkin' class="{{isActivePath '/checkin'}}" title='Health Club')
+                        i.grey.clinic.medical.icon
+                        //- +i name='treadmill'    
+                        .mobile.hidden Health Club
             .right.menu
                 if currentUser
                     a.icon.item.set_task(href='/m/task' class="{{isActivePath '/m/task'}}")
