--- a/components/delta/model_doc.jade
+++ b/components/delta/model_doc.jade
@@ -24,7 +24,7 @@ template(name='model_doc_view')
             .row
                 .six.wide.column
                     .ui.cloud.segment
-                        a.ui.circular.large.basic.button(href="/m/#{current_model.slug}" title=current_model.plural)
+                        .ui.circular.large.basic.button.back_to_model
                             i.left.chevron.icon
                             i.icon(class=current_model.icon)
                             |#{current_model.title}
