four column rows in front, watson view underneath single_doc view

--- a/client/ads.jade
+++ b/client/ads.jade
@@ -1,5 +1,5 @@
 template(name='ads')
-    .ui.secondary.segment
+    .ui.segment
         .ui.small.grey.header resident advertisement
         with current_ad
             +html_view key='content' direct=true
