--- a/client/nav.jade
+++ b/client/nav.jade
@@ -156,7 +156,7 @@ template(name='footer')
             .eight.wide.column
                 //- +health_club_info
             
-                if is_resident
+                if is_resident_or_user
                     +ads
                     form(action='https://www.paypal.com/cgi-bin/webscr', method='post', target='_top')
                         input(type='hidden', name='cmd', value='_s-xclick')
