--- a/client/profile/user_edit.jade
+++ b/client/profile/user_edit.jade
@@ -28,6 +28,7 @@ template(name='user_edit')
                                 +text_edit key='first_name' label='First Name' direct=true
                                 +text_edit key='last_name' label='Last Name' direct=true
                                 //- +text_edit key='address' label='Address' direct=true
+                                +number_edit key='healthclub_code' label='Healthclub Code' direct=true
                                 +number_edit key='unit_number' label='Unit #' direct=true
                                 +number_edit key='building_number' label='Building #' direct=true
                                 //- +text_edit key='building_code' label='Building Code' direct=true
